--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.0.0",
     "axios": "^1.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
@@ -55,6 +56,7 @@
     "nx": "16.5.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
